name:          language-nix
version:       2.3.0
synopsis:      Data types and functions to represent the Nix language
description:   Data types and useful functions to represent and manipulate the Nix
               language.
license:       BSD3
license-file:  LICENSE
author:        Peter Simons
maintainer:    simons@cryp.to
tested-with:   GHC == 8.10.7, GHC == 9.0.2, GHC == 9.2.8, GHC == 9.4.8, GHC == 9.6.7 || == 9.8.4 || == 9.10.2 || == 9.12.2
category:      Distribution, Language, Nix
homepage:      https://github.com/NixOS/cabal2nix/tree/master/language-nix#readme
bug-reports:   https://github.com/NixOS/cabal2nix/issues
build-type:    Simple
cabal-version: 1.18
extra-doc-files: README.md
                 CHANGELOG.md

source-repository head
  type:     git
  location: https://github.com/NixOS/cabal2nix
  subdir:   language-nix

library
  exposed-modules:  Language.Nix
                    Language.Nix.Binding
                    Language.Nix.Identifier
                    Language.Nix.Path
  hs-source-dirs:   src
  build-depends:    base < 5, QuickCheck, deepseq, lens, parsec-class, pretty
  default-language: Haskell2010
  other-extensions: FlexibleContexts
                    TemplateHaskell
                    GeneralizedNewtypeDeriving
                    DeriveGeneric

test-suite hspec
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          hspec.hs
  build-depends:    base
                  , language-nix
                  , hspec
                  , QuickCheck
                  , lens
                  , parsec-class
                  , pretty
                  , process
  default-language: Haskell2010
