name:                BioHMM
version:             1.2.0
synopsis:            Libary for Hidden Markov Models in HMMER3 format. 
description:         Libary containing parsing and visualisation functions and datastructures for Hidden Markov Models in HMMER3 format.  
license:             GPL-3
license-file:        LICENSE
author:              Florian Eggenhofer
maintainer:          egg@informatik.uni-freiburg.de
-- copyright:           
category:            Bioinformatics
build-type:          Simple
cabal-version:       >=1.8

extra-source-files:
  README.md changelog

source-repository head
  type:     git
  location: https://github.com/eggzilla/BioHMM

source-repository this
  type:     git
  location: https://github.com/eggzilla/BioHMM/tree/1.2.0
  tag:      1.2.0

library
  -- Modules exported by the library.
  exposed-modules:   Bio.HMMData
                     Bio.HMMParser
                     Bio.HMMDraw
                     Bio.HMMCompareResult

  -- compiler-options:
  ghc-options:         -Wall -fno-warn-unused-do-bind

  -- Other library packages from which modules are imported.
  build-depends:       base >=4.5 && <5, parsec>=3.1.9, diagrams-lib>=1.3, text, vector, ParsecTools, diagrams-cairo>=1.3, filepath, colour, directory, either-unwrap, SVGFonts >= 1.6, StockholmAlignment>=1.1.0
  
  -- Directories containing source files.
  hs-source-dirs:      src
