name:           FenwickTree
version:        0.1.2.1
stability:      alpha
homepage:       https://github.com/mgajda/FenwickTree
package-url:    http://hackage.haskell.org/package/FenwickTree
synopsis:       Data structure for fast query and update of cumulative sums
description:    Fenwick trees are a O(log N) data structure for updating cumulative sums.
                This implementation comes with an operation to find a least element for
                which real-valued cumulative sum reaches certain value, and allows for
                storage of arbitrary information in the nodes.
category:       Data Structures
license:        BSD3
license-file:   LICENSE

author:         Michal J. Gajda
copyright:      Copyright by Michal J. Gajda '2013
maintainer:     mjgajda@googlemail.com
bug-reports:    mailto:mjgajda@googlemail.com

build-type:     Simple
cabal-version:  >=1.8
tested-with:    GHC==7.8.4
data-files:     README.md changelog

source-repository head
  type:     git
  location: git://github.com:mgajda/FenwickTree.git

Library
  ghc-options:      -fspec-constr-count=4 -O3 
  build-depends:    base>=4.0, base <5, template-haskell, QuickCheck >= 2.5.0.0
  other-extensions: ScopedTypeVariables
  exposed-modules:  Data.Tree.Fenwick
  exposed:          True

Test-suite test_FenwickTree
  Type:             exitcode-stdio-1.0
  main-is:          tests/test_Fenwick.hs
  ghc-options:      -fspec-constr-count=4 -O3 
  Build-depends:    base>=4.0, base <5, template-haskell, QuickCheck >= 2.5.0.0

