Name: HPDF
Version: 1.4.10
cabal-version: >=1.10
License: BSD3
License-file:LICENSE
Copyright: Copyright (c) 2007-2016, alpheccar.org
category: Graphics
synopsis: Generation of PDF documents
maintainer: misc@NOSPAMalpheccar.org
build-type: Simple
tested-with: GHC==7.8.4,GHC==7.10.2
homepage: http://www.alpheccar.org
description: A PDF library with support for several pages, page transitions, outlines, annotations, compression, colors, shapes, patterns, jpegs, fonts, typesetting ... Have a look at the "Graphics.PDF.Documentation" module to see how to use it. Or, download the package and look at the test.hs file in the Test folder. That file is giving an example of each feature.
extra-source-files:
  c/ctext.h
  c/metrics.h
  c/conversion.h
  Test/AFMParser.hs
  Test/logo.jpg
  Test/Makefile
  Test/Penrose.hs
  Test/test.hs
  README.txt
  NEWS.txt
  TODO.txt
  changelog.md

source-repository head
  type:     git
  location: https://github.com/alpheccar/HPDF.git

Test-Suite HPDF-Tests
  Type:              exitcode-stdio-1.0
  Main-is:           HPDF-tests.hs
  hs-source-dirs:    Test
  Build-depends:     base >= 4, 
                     HTF >= 0.10,
                     HPDF
  Default-language:  Haskell2010
  
library
  build-depends: 
      base >= 4 && < 5, 
      containers, 
      random >= 1.0, 
      bytestring >= 0.9, 
      array >= 0.1, 
      zlib >= 0.5, 
      binary >= 0.4, 
      mtl,
      vector >=0.10,
      errors,
      base64-bytestring >= 0.1
  Default-language:  Haskell2010

  ghc-options: -Wall -fno-warn-tabs -funbox-strict-fields  -O2

  C-Sources:  
     c/metrics.c
     c/conversion.c
  Include-Dirs: c
  Install-Includes: 
     ctext.h
     conversion.h
  exposed-Modules: 
     Graphics.PDF
     Graphics.PDF.Colors
     Graphics.PDF.Coordinates
     Graphics.PDF.Document
     Graphics.PDF.Shapes
     Graphics.PDF.Text
     Graphics.PDF.Navigation
     Graphics.PDF.Image
     Graphics.PDF.Action
     Graphics.PDF.Annotation
     Graphics.PDF.Pattern
     Graphics.PDF.Shading
     Graphics.PDF.Typesetting
     Graphics.PDF.Hyphenate
     Graphics.PDF.Documentation
  Other-Modules:
     Graphics.PDF.LowLevel.Types
     Graphics.PDF.Data.PDFTree
     Graphics.PDF.Data.Trie
     Graphics.PDF.Pages
     Graphics.PDF.Resources
     Graphics.PDF.Draw
     Graphics.PDF.Hyphenate.English
     Graphics.PDF.Hyphenate.LowLevel
     Graphics.PDF.LowLevel.Kern
     Graphics.PDF.Typesetting.Breaking
     Graphics.PDF.Typesetting.Horizontal
     Graphics.PDF.Typesetting.Vertical
     Graphics.PDF.Typesetting.Box
     Graphics.PDF.Typesetting.Layout
     Graphics.PDF.LowLevel.Serializer
     Graphics.PDF.Typesetting.StandardStyle
