name:           benchpress
version:        0.2.2.10
synopsis:       Micro-benchmarking with detailed statistics.
Description:    Benchmarks actions and produces statistics
                such as min, mean, median, standard deviation,
                and max execution time.  Also computes
                execution time percentiles.  Comes with
                functions to pretty-print the results.
license:        BSD3
license-file:   LICENSE
author:         Johan Tibell
maintainer:     me@willsewell.com
build-type:     Simple
cabal-version:  >= 1.2
category:       Testing
homepage:       https://github.com/WillSewell/benchpress

library
  exposed-modules:  Test.BenchPress

  other-modules:  Math.Statistics

  build-depends:  base >= 2.0 && < 4.11,
                  mtl >= 1 && < 2.3,
                  time >= 1 && < 1.10

  ghc-options:  -funbox-strict-fields -Wall

executable example
  main-is:  Main.hs

  -- This is not in build-depends for cabal 1.2 compatibility (requires 1.8)
  other-modules:  Test.BenchPress
                  Math.Statistics

  hs-source-dirs:  example, .

  build-depends:  base,
                  bytestring

  ghc-options:  -funbox-strict-fields -Wall
