Name:         blaze-markup
Version:      0.8.0.0
Homepage:     http://jaspervdj.be/blaze
Bug-Reports:  http://github.com/jaspervdj/blaze-markup/issues
License:      BSD3
License-file: LICENSE
Author:       Jasper Van der Jeugt, Simon Meier, Deepak Jois
Maintainer:   Jasper Van der Jeugt <m@jaspervdj.be>
Stability:    Experimental
Category:     Text
Synopsis:     A blazingly fast markup combinator library for Haskell
Description:
  Core modules of a blazingly fast markup combinator library for the Haskell
  programming language. The Text.Blaze module is a good
  starting point, as well as this tutorial:
  <http://jaspervdj.be/blaze/tutorial.html>.

Build-type:    Simple
Cabal-version: >= 1.8

Extra-source-files:
  CHANGELOG

Library
  Hs-source-dirs: src
  Ghc-Options:    -Wall

  Exposed-modules:
    Text.Blaze
    Text.Blaze.Internal
    Text.Blaze.Renderer.Pretty
    Text.Blaze.Renderer.String
    Text.Blaze.Renderer.Text
    Text.Blaze.Renderer.Utf8

  Build-depends:
    base          >= 4    && < 5,
    blaze-builder >= 0.3  && < 0.5,
    text          >= 0.10 && < 1.3,
    bytestring    >= 0.9  && < 0.11

Test-suite blaze-markup-tests
  Type:           exitcode-stdio-1.0
  Hs-source-dirs: src tests
  Main-is:        TestSuite.hs
  Ghc-options:    -Wall

  Other-modules:
    Text.Blaze.Tests
    Text.Blaze.Tests.Util

  Build-depends:
    HUnit                      >= 1.2 && < 1.6,
    QuickCheck                 >= 2.4 && < 2.10,
    containers                 >= 0.3 && < 0.6,
    test-framework             >= 0.4 && < 0.9,
    test-framework-hunit       >= 0.3 && < 0.4,
    test-framework-quickcheck2 >= 0.3 && < 0.4,
    -- Copied from regular dependencies...
    base          >= 4    && < 5,
    blaze-builder >= 0.3  && < 0.5,
    text          >= 0.10 && < 1.3,
    bytestring    >= 0.9  && < 0.11

Source-repository head
  Type:     git
  Location: http://github.com/jaspervdj/blaze-markup
